--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,14 @@ android {
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.0.0'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-  implementation 'com.google.android.material:material:1.0.0'
-  implementation 'androidx.cardview:cardview:1.0.0'
-  implementation 'com.google.android.gms:play-services-maps:16.0.0'
-  implementation "com.google.android.gms:play-services-location:16.0.0"
-  implementation 'org.jetbrains.anko:anko-commons:0.10.7'
-  implementation "com.google.code.gson:gson:2.8.5"
+  implementation "androidx.appcompat:appcompat:$app_compat_version"
+  implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+  implementation "com.google.android.material:material:$material_version"
+  implementation "androidx.cardview:cardview:$cardview_version"
+  implementation "com.google.android.gms:play-services-maps:$play_services_maps_version"
+  implementation "com.google.android.gms:play-services-location:$play_services_location_version"
+  implementation "org.jetbrains.anko:anko-commons:$anko_commons_version"
+  implementation "com.google.code.gson:gson:$gson_version"
   testImplementation 'junit:junit:4.12'
   androidTestImplementation 'androidx.test:runner:1.1.0'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
