--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,11 @@ buildscript {
   ext.play_services_maps_version = '16.0.0'
   ext.play_services_location_version = '16.0.0'
 
+  ext.anko_version = '0.10.7'
   ext.anko_commons_version = '0.10.7'
   ext.gson_version = '2.8.5'
+
+  ext.room_version = "2.0.0"
 
   repositories {
     google()
